--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,6 +15,6 @@ spec:
        spec:
           containers:
              - name: cont01
-               image: saikumar1817/trevis:v1
+               image: saikumar1817/mytrevis:v1
                ports:
                  - containerPort: 3000
